# refactored-winner

./: .clang-format  .gitignore  CMakeLists.txt  g5task.sln
src/: CArray.h  g5task.vcxproj  g5task.vcxproj.filters  main.cpp
tests/: CMakeLists.txt  carray_int_other_tests.cpp  carray_int_tests.cpp  carray_obj_tests.cpp  carray_performance_tests.cpp  carray_str_tests.cpp  carray_tests.cpp  carray_tests.h
